--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^7.0.0",
+    "@config-plugins/react-native-pdf": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "crypto-js": "^4.2.0",
     "expo": "~50.0.17",
     "expo-constants": "~15.4.6",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.9",
+    "expo-intent-launcher": "~10.11.0",
     "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.2",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "fbjs": "^3.0.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-blob-util": "^0.19.9",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.1.0"
+    "react-native-svg": "14.1.0",
+    "react-native-webview": "^13.8.6",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
