--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,10 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "android": {
+        "distribution": "internal",
+        "buildType": "apk"
+      }
     },
     "production": {}
   }
