--- a/app.json
+++ b/app.json
@@ -26,12 +26,10 @@
       "package": "com.gourav0507.RailPrep"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logo.png"
     },
     "plugins": [
-      "expo-router",
-      "@config-plugins/react-native-blob-util",
-      "@config-plugins/react-native-pdf"
+      "expo-router"
     ],
     "extra": {
       "router": {
